--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@builderbot/bot": "1.3.2-y.0",
     "@builderbot/provider-baileys": "1.3.2-y.0",
+    "@google/genai": "^1.17.0",
+    "dotenv": "^17.2.2",
     "jimp": "^1.6.0"
   },
   "devDependencies": {
