--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "keywords": [],
   "dependencies": {
-    "@builderbot/bot": "1.3.2-y.0",
-    "@builderbot/provider-baileys": "1.3.2-y.0",
+    "@builderbot/bot": "v1.3.5-alpha.9",
+    "@builderbot/provider-baileys": "v1.3.5-alpha.9",
     "@google/genai": "^1.17.0",
     "dotenv": "^17.2.2",
     "jimp": "^1.6.0"
