feat: migrate from google genai to anthropic sdk
- replace google genai with anthropic sdk for llm integration
- update system prompt to match anthropic's style and requirements
- adjust response handling to work with anthropic's message format

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "keywords": [],
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.67.0",
     "@builderbot/bot": "v1.3.5-alpha.9",
     "@builderbot/provider-baileys": "v1.3.5-alpha.9",
-    "@google/genai": "^1.17.0",
     "dotenv": "^17.2.2",
     "jimp": "^1.6.0"
   },
